# overworld

./: .dependency-cruiser.cjs  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: adapters-steam.md  config.json  hextech-button-cleanup.md  p0-combat-hud.md  p0-minimap-hud.md  p0-spatial-focus.md  test-kit.md  ui-extensibility-patch.md  ui-package.md  violet-suns-publish.md  world-production-v2-1.md  world-production-v2-audio.md  world-production-v2-core.md  world-production-v2-environment.md  world-production-v2-input.md  world-production-v2-loading.md  world-production-v2-minimap.md  world-production-v2-scene.md
.github/workflows/: build-artifacts.yml  ci.yml  publish-steam-crate.yml  release.yml
apps/docs/: next.config.mjs  package.json  source.config.ts
benchmarks/: README.md  baseline.json  package.json
benchmarks/results/: latest.json
benchmarks/src/: lib.mjs  run.mjs
docs/: api-review-1.0.md  architecture.md  migration-from-degener-city.md
docs/guides/: assets.md  authoritative-multiplayer.md  content-hmr.md  content-packs.md  dense-world.md  i18n.md  persistence-interop.md  platforms.md  releasing.md  signing-and-store.md  testing.md
docs/specs/: 2026-07-16-overworld-framework-design.md  2026-07-16-v1.1-multi-platform-design.md  (+2 more)
examples/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/desktop-tauri/src-tauri/capabilities/: default.json
examples/desktop-tauri/src-tauri/icons/: icon.icns
examples/desktop-tauri/src-tauri/src/: lib.rs  main.rs
(+176 files in other folders)
