[package]
name = "overworld-desktop"
version = "1.0.0"
description = "Overworld Desktop — Tauri 2 shell around the Overworld starter game"
authors = ["Overworld"]
edition = "2021"

[lib]
name = "overworld_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
overworld-steam = { path = "../../../packages/adapters-steam/src-tauri" }
